[project]
name = "experiments"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.8.1",
    "langchain-core>=0.3.67",
    "langchain-openai>=0.3.27",
    "pendulum>=3.1.0",
    "pydantic>=2.11.7",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ruff>=0.12.1",
]
